# synapse-research

./: .gitignore  .mcpbignore  CLAUDE.md  LICENSE  Makefile  README.md  context.md  manifest.json  mpak.json  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
schemas/: research_run.schema.json
skills/research-runs/: SKILL.md
src/mcp_research/: __init__.py  _tasks.py  _title.py  server.py  worker.py
tests/: conftest.py  test_spec_compliance.py  test_ui_retry_contract.py  test_worker.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.tsx  styles.ts  theme-utils.ts
