[project]
name = "synapse-research"
version = "0.1.0"
description = "Research runs powered by MCP tasks — kick off long-running research and track progress in real time."
requires-python = ">=3.13"
dependencies = [
    "upjack[mcp]>=0.5.1",
    "fastmcp[tasks]>=3.0.0",
    "gpt-researcher>=0.14.8",
    # gpt-researcher declares langchain-anthropic only under the optional
    # "requirements-txt" extra; pin it explicitly so the bundled deps/ has
    # it (without dragging in the other 20+ providers in that extra).
    "langchain-anthropic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_research"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "ty>=0.0.1a1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
